# Licenta_2017

./: Documentatie_Finala.docx
AGA + Cluster/Node/: CMakeLists.txt  jsoncpp.cpp  main.cpp
AGA + Cluster/Node/Cluster/: Granita.cpp  Granita.h  Migration.cpp  Migration.h  Node.cpp  Node.h
AGA + Cluster/Node/GeneticAlgorithm/: AlgoritmGenetic.cpp  AlgoritmGenetic.h  Harta.cpp  Harta.h  Locatie.cpp  Locatie.h  Solutie.cpp  Solutie.h  SpatiuDeSolutii.cpp  SpatiuDeSolutii.h
AGA + Cluster/Node/Helpful/: ResetConnection.cpp  ResetConnection.h  SocketDataTransfer.h
AGA + Cluster/Server/: .classpath  myKey2017
AGA + Cluster/TSPClusterManager/: .classpath  .project  build.fxbuild
AGA + Cluster/TSPClusterManager/src/: Serverkey
AGA + Procesare pe nuclee/TSPApplication/: .classpath  .project  build.fxbuild
AGA + Procesare pe nuclee/TSP_Multicore_Processing/: AlgoritmGenetic.cpp  AlgoritmGenetic.h  CMakeLists.txt  Harta.cpp  Harta.h  Locatie.h  Server.cpp  Server.h  SocketDataTransfer.h  Solutie.cpp  Solutie.h  SpatiuDeSolutii.cpp  SpatiuDeSolutii.h  main.cpp
AGA + Procesare pe nuclee/TSP_Multicore_Processing/json/: json-forwards.h  json.h
Alte resurse/: Documentatie_Licenta.docx  Grafic_iteratii.xlsx  Grafic_solutie_determinara.xlsx  Grafic_timp.xlsx  ImportanțamutațieiGrafic.xlsx  PopulatieDimensiuneGrafic.xlsx  STAT_GA_FOR_TSP.xlsx  Statistica_GA_Generalxlsx.xlsx  mutatieStatică.xlsx
Licenta2017NastacaGheorghita/: Prezentare.pptx
TSP_General/: CMakeLists.txt  Individual.h  Location.h  Map.h  Population.h  SolvProblem.h  main.cpp
(+36 files in other folders)
